objects/copado__Selenium_Test_Case_Per_Suite__c.object
<CustomObject>
    <fields>
        <fullName>copado__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Case__c</fullName>
        <label>Selenium Test Case</label>
        <referenceTo>copado__Selenium_Test_Case__c</referenceTo>
        <relationshipLabel>Selenium Test Cases per Suite</relationshipLabel>
        <relationshipName>Selenium_Test_Cases_Per_Suite</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Suite__c</fullName>
        <label>Selenium Test Suite</label>
        <referenceTo>copado__Selenium_Test_Suite__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Selenium_Test_Cases_Per_Suite</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>copado__Test_Dataset_Name__c</fullName>
        <description>Attachment ID of the selected dataset in the testdata</description>
        <label>Test Dataset Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>